# bxn

./: CMakeLists.txt  README.md
res/shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: bxn.h  input.c  input.h  io.c  io.h  platform.c  platform.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/glad/: gl.h
src/math/: math.c  math.h
